# Microsoft-Todo-Desktop-Widget

./: .gitignore  Design.md  README.md  ms-todo-desktop-widget.config.example.json  package-lock.json  package.json
macos-widget/: Info.plist  README.md  project.yml
macos-widget/Entitlements/: TodoWidgetExtension.entitlements
macos-widget/Sources/: SnapshotStore.swift  TodoWidget.swift  WidgetConfig.swift  WidgetSnapshot.swift
scripts/: build-macos-widget-extension.sh  build-macos-with-widget.sh  build-tauri-with-env.ps1  build-tauri-with-env.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  config.rs  db.rs  debug_console.rs  graph.rs  hotkey.rs  lib.rs  main.rs  models.rs  settings.rs  sync.rs  tray.rs  widget_snapshot.rs
src/components/: FooterStatus.tsx  QuickAddOverlay.tsx  SettingsPanel.tsx  TaskDetailsPanel.tsx  TaskInput.tsx  TaskItem.tsx  TaskList.tsx  TitleBar.tsx  WidgetContextMenu.tsx  WidgetShell.tsx
src/lib/: api.ts  dates.ts  format.ts  i18n.tsx  types.ts
